# streamlit-agent

./: .gitignore  pyproject.toml
streamlit_agent/: Home.py  chain_retrieval.py  chat_login.py  chat_ui.py  mrkl_demo.py  notion_ingest.py  openai_functions.py  tokens.py  transfers.py
streamlit_agent/functions/: nft_collections.py  shopify.py
streamlit_agent/pages/: 2_Settings.py
streamlit_agent/utils/: notion_ingest.py  process_markdown.py
